Name:                wordcloud
Version:             0.0.1
Cabal-version:       >= 1.4
Synopsis:            Library for generating word/tag clouds.
Description:         Library for generating word/tag cloud images from histograms.
License:             BSD3
Author:              Chris Done
Maintainer:          Chris Done <chrisdone@gmail.com>
Build-Depends:       base
Build-type:          Simple
Category:            Graphics

Library
  Build-depends:   base==4.*,syb,mtl,containers,gd,bytestring,random,data-default
  Exposed-Modules: Graphics.WordCloud, Graphics.WordCloud.Types
  extensions:      StandaloneDeriving
  ghc-options:     -Wall
